2017-02-13 belangeo <belangeo@gmail.com>

    * Final revision for version 0.8.3.

2017-02-13 belangeo <belangeo@gmail.com>

    * Added new object: MidiDispatcher, self-contained midi dispatcher thread.
      Updated MidiListener.

2017-02-12 belangeo <belangeo@gmail.com>

    * Upgraded version number to 0.8.3.

2017-02-12 belangeo <belangeo@gmail.com>

    * Prevents the creation of a SharedTable object on Windows (not implemented yet).

2017-02-12 belangeo <belangeo@gmail.com>

    * Fader and Adsr now start a new envelope from the current amplitude value
      if the previous ramp has not finished yet.

2017-02-12 belangeo <belangeo@gmail.com>

    * Added new object: TableScan, Reads the content of a table in loop,
      without interpolation.

2017-02-11 belangeo <belangeo@gmail.com>

    * Added setGlobalDur, setGlobalDel, getGlobalDur and getGlobalDel methods
      to the Server object. These methods allow the user to manage starttime
      and duration of audio objects globally.

2017-02-09 belangeo <belangeo@gmail.com>

    * Added shape argument to PVAmpMod and PVFreqMod objects. 
      It allows to change the modulation oscillator's waveform.

2017-02-08 belangeo <belangeo@gmail.com>

    * Added onlyonce argument to Beat object.

2017-02-08 belangeo <belangeo@gmail.com>

    * Seq now accepts floating-point values as time units.

2017-02-07 belangeo <belangeo@gmail.com>

    * Added maxwindow argument to TableWrite. This is the maximum number of samples
      over which the object is allowed to interpolate. Useful to avoid interpolation
      over the entire table when using a circular writing pointer.

2017-02-05 belangeo <belangeo@gmail.com>

    * Added new object: TableFill, continuously fills a table with incoming samples.

2017-02-04 belangeo <belangeo@gmail.com>

    * Added onlyonce argument to Seq object.

2017-01-30 belangeo <belangeo@gmail.com>

    * Added new object: Particle2, An even more full control granular synthesis generator.
