@@ -41,6 +41,7 @@ Examples
    Playing with soundfiles <examples/04-soundfiles/index>
    Amplitude envelopes <examples/05-envelopes/index>
    Filtering <examples/06-filters/index>
+   Multicore audio programming <examples/18-multicore/index>
 
 Much more to come... Stay tuned!
 
