@@ -1,3 +1,7 @@
+2017-02-19 belangeo <belangeo@gmail.com>
+
+    * Added examples about multicore audio programming with pyo.
+
 2017-02-13 belangeo <belangeo@gmail.com>
 
     * Final revision for version 0.8.3.
